# Netbox-insights-dashboard

./: .gitignore  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  README.md.backup  index.html  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: publish-pypi.yaml
changelog/: index.html
contributing/: index.html
netbox-insights-dashboard-plugin/: CONFIGURATION.md  CONTRIBUTING.md  INSTALLATION.md  mkdocs.yml
netbox-insights-dashboard-plugin/.github/ISSUE_TEMPLATE/: config.yml  feature_request.yaml
netbox-insights-dashboard-plugin/netbox_insights_dashboard_plugin/: __init__.py  admin.py  filtersets.py  models.py  views.py
netbox-insights-dashboard-plugin/netbox_insights_dashboard_plugin/api/: urls.py  views.py
netbox-insights-dashboard-plugin/netbox_insights_dashboard_plugin/migrations/: __init__.py
netbox-insights-dashboard-plugin/netbox_insights_dashboard_plugin/widgets/: __init__.py  base.py  ipam_utilization.py  predictive_maintenance.py
netbox-insights-dashboard-plugin/tests/: test_netbox_insights_dashboard_plugin.py
netbox_insights_dashboard_plugin/: forms.py  navigation.py  tables.py  urls.py  views.py
netbox_insights_dashboard_plugin/api/: __init__.py  serializers.py
netbox_insights_dashboard_plugin/migrations/: 0001_initial.py
netbox_insights_dashboard_plugin/static/netbox_insights_dashboard_plugin/css/: dashboard.css
netbox_insights_dashboard_plugin/static/netbox_insights_dashboard_plugin/js/: widgets.js
netbox_insights_dashboard_plugin/templates/netbox_insights_dashboard_plugin/: config.html  dashboard.html
netbox_insights_dashboard_plugin/utils/: __init__.py  cache.py  calculations.py  predictions.py  validators.py
netbox_insights_dashboard_plugin/widgets/: capacity_planning.py  data_quality.py  device_health.py  ipam_utilization.py  predictive_maintenance.py  topology_status.py
search/: search_index.json
tests/: __init__.py  test_netbox_insights_dashboard_plugin.py
(+6 files in other folders)
